# Argus

./: CMakeLists.txt  Dockerfile  Makefile  README.md  argus-deployment.yml  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
Argus/: Argus.cpp  Argus.h  CMakeLists.txt  Dockerfile
docs/: troubleshooting.md
media/: overview.md
rtmp/: Dockerfile  README.md  nginx.conf
rtmp/examples/: index.html
